--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Template Website</title>
+    <title>Basic Template Website</title>
 </head>
+<title>Basic Template</title>
+<link rel="stylesheet"type="text/css" href="#">
 <body>
-    
+  
+    <p>This is my first website</p>
 </body>
 </html>
