--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <link rel="stylesheet"type="text/css" href="#">
 <body>
   
-    <p>This is my first website</p>
+    <header>
+       <img src="#" alt=""> 
+       <h1>Template Website</h1>
+    </header>
 </body>
 </html>
