created header added logo image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   
     <header>
-       <img src="#" alt=""> 
+       <img src="anomar logo.jpg" alt="Logo for anomar design"> 
        <h1>Template Website</h1>
     </header>
 </body>
