--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="main-header">
                 <header>
                 <img src="anomar logo.jpg" alt="Logo for anomar design"> 
+                
                 <h1>Template Website</h1>
              </header>
         </div>
@@ -24,11 +25,13 @@
 Vel tempora aspernatur a doloribus voluptas similique provident voluptatum eum aut temporibus, ab veniam enim beatae ullam suscipit dolore. Dolores id minima ipsa ratione eum sed inventore rerum at harum!
 Ex inventore sapiente modi aperiam deleniti? Maiores rerum exercitationem magnam sunt ipsam sequi ex cum quidem ea mollitia veritatis repellendus suscipit quisquam, pariatur voluptates natus tenetur neque explicabo officiis consequuntur.</p>
 <img src="dream-code-create.jpg" alt="Django poster">
+<p class="caption">image caption header</p>
 <h2>sub header 2</h2>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum sapiente repudiandae nihil vel, eius voluptatibus nemo quo sequi, hic debitis laborum cumque ex soluta at libero, amet iste dolorum voluptate!Alias reprehenderit atque est ipsum quaerat repellendus vel perferendis ea. Optio, tempore. Atque expedita cumque saepe illo doloremque? Tempore, esse? Quibusdam quod, quaerat ut sunt reiciendis nam sed omnis aliquid.</p>
 <img src="bluebrick.jpg" alt="edited blue brick">
+<p class="caption">image caption header</p>
        </div>
-       
+
        <footer>
 
        </footer>
